correct vocabulary from reverse to invert

--- a/FST_UI.html
+++ b/FST_UI.html
@@ -15,7 +15,7 @@
     <p>
       <label for="backward_input">Input text here:</label>
       <input type="text" id="backward_input">
-      <input type="button" value="Transduce reversed" onClick="transduce(revFST, 'backward_input', 'backward_output')">
+      <input type="button" value="Transduce inverted" onClick="transduce(revFST, 'backward_input', 'backward_output')">
     </p>
     <p id="backward_output"></p>
     <script src="myFunctions.js"></script>
